--- a/planningpoker/static/style.css
+++ b/planningpoker/static/style.css
@@ -19,6 +19,8 @@ body {
     display: flex;
     flex-direction: row;
     height: 33px;
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
 
 .user_name {
@@ -36,6 +38,7 @@ body {
     font-family: 'Open Sans', sans-serif;
     font-size: larger;
     width: 55px;
+    border-radius: 10%;
 }
 
 .played_card {
@@ -43,7 +46,8 @@ body {
     padding-top: 1px;
     width: 55px;
     text-align: center;
-    height: 100%
+    height: 100%;
+    border-radius: 15%;
 }
 
 .input_line {
