--- a/planningpoker/templates/index.html
+++ b/planningpoker/templates/index.html
@@ -6,7 +6,7 @@
   <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   <link rel="manifest" href="{{ url_for('static', filename='manifest.webapp') }}">
 
-  <script type="text/javascript" language="javascript" src="{{ url_for('static', filename='game.js') }}"></script>
+  <script type="text/javascript" language="javascript" src="{{ url_for('static', filename='poker.js') }}"></script>
 </head>
 <body onload="backgroundCheck()">
 <form method="post">
