--- a/planningpoker/templates/index.html
+++ b/planningpoker/templates/index.html
@@ -18,8 +18,8 @@
         <span>{{user.name}}</span>
       </div>
         {% if table.played_cards[user] != null %}
-        <div class="played_card">
-          {% if table.card_value_visible %}
+        <div class="played_card {% if not table.card_value_visible %}closed_card{% endif %}">
+          {% if table.card_value_visible or user == my_user %}
             <span>{{table.played_cards[user].text}}</span>
           {% endif %}
         </div>
