--- a/planningpoker/templates/invitation.html
+++ b/planningpoker/templates/invitation.html
@@ -5,14 +5,16 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
   <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   <link rel="manifest" href="{{ url_for('static', filename='manifest.webapp') }}">
+
+  <script type="text/javascript" src="{{ url_for('static', filename='poker.js') }}"></script>
 </head>
 <body>
 <form action="/accept_invitation" method="post">
   <h1>{{table.description}} beitreten</h1>
   <div class="input_line">
-    <span class="common_label">Mein Name</span><input name="user_name" value="{{user_name}}" type="text" class="common_input">
+    <span class="common_label">Mein Name</span><input id="user_name" name="user_name" value="{{user_name}}" type="text" class="common_input" onkeyup="updateJoinButtonStatus()">
   </div>
-  <input type="submit" class="action_button" value="Tisch beitreten"></input>
+  <input id="join_button" type="submit" class="action_button" value="Tisch beitreten" disabled></input>
 </form>
 </body>
 </html>
