--- a/planningpoker/templates/invite.html
+++ b/planningpoker/templates/invite.html
@@ -5,7 +5,7 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
   <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 
-  <script type="text/javascript" language="javascript" src="{{ url_for('static', filename='poker.js') }}"></script>
+  <script type="text/javascript" src="{{ url_for('static', filename='poker.js') }}"></script>
 
   <link rel="manifest" href="{{ url_for('static', filename='manifest.webapp') }}">
 </head>
