Appengine Persistence Zwischenstand

--- a/planningpoker/templates/invite.html
+++ b/planningpoker/templates/invite.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Vier gewinnt</title>
+  <title>Planning Poker</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
   <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 
