--- a/planningpoker/templates/index.html
+++ b/planningpoker/templates/index.html
@@ -38,7 +38,7 @@
   </div>
   <input type="submit" formaction="/show" class="action_button" value="aufdecken" {% if show_action_disabled %}disabled{% endif %}></input>
   <input type="submit" formaction="/clear" class="action_button" value="abräumen"></input>
-  <input type="submit" formaction="/" class="action_button" value="aktualisieren"></input>
+  <input type="submit" formaction="/table" class="action_button" value="aktualisieren"></input>
 </form>
 </body>
 </html>
