--- a/planningpoker/templates/table.html
+++ b/planningpoker/templates/table.html
@@ -9,17 +9,18 @@
   <script type="text/javascript" src="{{ url_for('static', filename='poker.js') }}"></script>
 </head>
 <body onload="backgroundCheck()">
+<h1>{{table.description}}</h1>
 <form method="post">
   <div class="board">
     <div class="board_column">
-      {% for user in table.users %}
+      {% for user in table.sorted_users() %}
       <div class="user_row">
       <div class="user_name">
         <span>{{user.name}}</span>
       </div>
         {% if table.card_played_by(user) != None %}
         <div class="played_card {% if not table.card_value_visible %}closed_card{% endif %}">
-          {% if table.card_value_visible or user == my_user %}
+          {% if table.card_value_visible or user.identifier == my_user.identifier %}
             <span>{{table.card_played_by(user).text}}</span>
           {% endif %}
         </div>
@@ -32,7 +33,7 @@
       <input type="submit"
              formaction="/card/{{key}}"
              class="card"
-             value="{{card.text}}">
+             value="{{card.text}}" {% if table.card_value_visible %}disabled{% endif %}>
       {% endfor %}
     </div>
   </div>
