--- a/planningpoker/templates/invitation.html
+++ b/planningpoker/templates/invitation.html
@@ -8,7 +8,7 @@
 
   <script type="text/javascript" src="{{ url_for('static', filename='poker.js') }}"></script>
 </head>
-<body>
+<body onload="updateJoinButtonStatus()">
 <form  method="post">
   <h1>{{table.description}} beitreten</h1>
   <div class="input_line">
