--- a/planningpoker/templates/table.html
+++ b/planningpoker/templates/table.html
@@ -20,7 +20,7 @@
       </div>
         {% if table.card_played_by(user) != None %}
         <div class="played_card {% if not table.card_value_visible %}closed_card{% endif %}">
-          {% if table.card_value_visible or user == my_user %}
+          {% if table.card_value_visible or user == my_user and preview_my_card %}
             <span>{{table.card_played_by(user).text}}</span>
           {% endif %}
         </div>
@@ -47,6 +47,7 @@
   </div>
   <div>
     <input id="auto_update" name="auto_update" type="checkbox" class="action_button" {%if auto_update %}checked{% endif %} onchange="onToggleAutoUpdate()">Automatisch aktualisieren</input>
+    <input id="preview_my_card" name="preview_my_card" type="checkbox" class="action_button" {%if preview_my_card %}checked{% endif %} onchange="onTogglePreviewMyCard()">meine Karte vorab zeigen</input>
   </div>
 </form>
 </body>
