--- a/planningpoker/static/style.css
+++ b/planningpoker/static/style.css
@@ -25,7 +25,9 @@ body {
 
 .user_name {
     padding-top: 4px;
-    width: 150px;
+    min-width: 160px;
+    padding-right: 5px;
+    padding-left: 5px;
 }
 
 .my_user_row {
